# tensorflow_scala

./: .gitattributes  .gitignore  .gitmodules  .jvmopts  .sbtopts  .scalafmt.conf  .travis.yml  LICENSE  README.md  RELEASE.md  architecture.html  architecture.md  build.sbt  contributing.html  documentation.html  getting_started.html  getting_started.md  guides.html  index.html  installation.html  introduction.md  paradox.json  release_notes.html  version.sbt
horovod/src/main/native/: CMakeLists.txt
jni/src/main/native/: CMakeLists.txt  c_api.h  c_eager_api.h  checkpoint_reader.cc  checkpoint_reader.h  exception.cc  exception.h  exception_jni.cc  file_io.cc  file_io.h  function.cc  function.h  graph.cc  graph_jni.cc  op.cc  op.h  op_jni.cc  op_jni.h  python_api.h  record_reader.cc  record_reader.h  server.cc  server.h  session.cc  session.h  session_jni.cc  tensor.cc  tensor.h  tensor_jni.cc  tensorflow.cc  tensorflow.h  tensorflow_jni.cc  tensorflow_jni.h  tf_c_api_internal.h  tf_c_eager_api.h  tf_checkpoint_reader.cc  tf_checkpoint_reader.h  tf_python_api.cc  tf_python_api.h  tf_status_helper.cc  (+2 more)
jni/src/main/native/include/: exception_jni.h  tensor_jni.h  tensorflow_jni.h  utilities.h
jni/src/main/native/include/Eigen/src/Core/: ProductEvaluators.h
jni/src/main/native/include/bazel-genfiles/tensorflow/cc/ops/: array_ops.h  image_ops.h  linalg_ops.h  linalg_ops_internal.h  math_ops.h  nn_ops.h  state_ops.h  string_ops.h  training_ops.h
jni/src/main/native/include/bazel-genfiles/tensorflow/core/debug/: debug_service.pb.h  debugger_event_metadata.pb.h
jni/src/main/native/include/bazel-genfiles/tensorflow/core/example/: example.pb.h  example_parser_configuration.pb.h  feature.pb.h
jni/src/main/native/include/bazel-genfiles/tensorflow/core/framework/: allocation_description.pb.h  api_def.pb.h  attr_value.pb.h  cost_graph.pb.h  device_attributes.pb.h  function.pb.h  graph.pb.h  graph_transfer_info.pb.h  iterator.pb.h  kernel_def.pb.h  log_memory.pb.h  node_def.pb.h  op_def.pb.h  reader_base.pb.h  remote_fused_graph_execute_info.pb.h  resource_handle.pb.h  step_stats.pb.h  summary.pb.h  tensor.pb.h  tensor_description.pb.h  tensor_shape.pb.h  tensor_slice.pb.h  types.pb.h  variable.pb.h  versions.pb.h
jni/src/main/native/include/bazel-genfiles/tensorflow/core/profiler/: profile.pb.h  tfprof_log.pb.h  tfprof_options.pb.h  tfprof_output.pb.h
jni/src/main/native/include/bazel-genfiles/tensorflow/core/protobuf/: checkpointable_object_graph.pb.h  cluster.pb.h  config.pb.h  control_flow.pb.h  debug.pb.h  device_properties.pb.h  eager_service.pb.h  master.pb.h  meta_graph.pb.h  named_tensor.pb.h  queue_runner.pb.h  rewriter_config.pb.h  saved_model.pb.h  saver.pb.h  tensor_bundle.pb.h  tensorflow_server.pb.h  transport_options.pb.h  worker.pb.h
jni/src/main/native/include/bazel-genfiles/tensorflow/core/util/: event.pb.h  memmapped_file_system.pb.h  saved_tensor_slice.pb.h  test_log.pb.h
jni/src/main/native/include/tensorflow/c/: c_api.h  c_api_experimental.h  c_api_internal.h  c_eager_api.h  c_eager_api_internal.h  checkpoint_reader.cc  checkpoint_reader.h  python_api.cc  python_api.h  record_reader.cc  status_helper.cc  status_helper.h
jni/src/main/native/include/tensorflow/cc/ops/: array_ops.h  state_ops.h
jni/src/main/native/include/tensorflow/core/example/: example.pb.h  example_parser_configuration.pb.h  feature.pb.h
jni/src/main/native/include/tensorflow/core/framework/: allocation_description.pb.h  attr_value.pb.h  cost_graph.pb.h  device_attributes.pb.h  function.pb.h  graph.pb.h  graph_transfer_info.pb.h  iterator.pb.h  kernel_def.pb.h  log_memory.pb.h  node_def.pb.h  op_def.pb.h  reader_base.pb.h  remote_fused_graph_execute_info.pb.h  resource_handle.pb.h  shape_inference.h  step_stats.pb.h  summary.pb.h  tensor.pb.h  tensor_description.pb.h  tensor_shape.pb.h  tensor_slice.pb.h  types.pb.h  variable.pb.h  versions.pb.h
jni/src/main/native/include/tensorflow/core/graph/: graph.h
jni/src/main/native/include/tensorflow/core/profiler/: tfprof_log.pb.h  tfprof_options.pb.h
jni/src/main/native/include/tensorflow/core/protobuf/: checkpointable_object_graph.pb.h  cluster.pb.h  config.pb.h  config.pb_text-impl.h  config.pb_text.h  control_flow.pb.h  debug.pb.h  device_properties.pb.h  eager_service.pb.h  master.pb.h  meta_graph.pb.h  named_tensor.pb.h  queue_runner.pb.h  rewriter_config.pb.h  rewriter_config.pb_text-impl.h  rewriter_config.pb_text.h  saved_model.pb.h  saver.pb.h  tensor_bundle.pb.h  tensorflow_server.pb.h  transport_options.pb.h  worker.pb.h
jni/src/main/native/include/tensorflow/core/public/: version.h
jni/src/main/native/include/tensorflow/core/util/: event.pb.h  memmapped_file_system.pb.h  saved_tensor_slice.pb.h  test_log.pb.h
jni/src/main/native/ops/: beam_search_ops.cc  c_api_helpers.cc  jvm_callback_op.cc  jvm_callback_op.h  tensor_handle.cc
modules/jni/src/main/native/: CMakeLists.txt  c_api_internal.cc  checkpoint_reader.cc  checkpoint_reader.h  checkpoint_reader_internal.cc  checkpoint_reader_internal.h  exception.h  file_io.cc  function.cc  function.h  graph.cc  graph.h  op.cc  op.h  python_api.cc  python_api.h  record_reader.cc  record_reader.h  server.cc  session.cc  session.h  tensor.cc  tensor.h  tensorflow.cc  tensorflow.h  utilities.h
modules/jni/src/main/native/include/tensorflow/c/: kernels.h  record_reader.h  tf_status_helper.cc
modules/jni/src/main/native/include/tensorflow/stream_executor/: dnn.pb.h
modules/jni/src/main/native/include_backup/absl/strings/: string_view.h
modules/jni/src/main/native/ops/: beam_search_ops.cc  beam_search_ops.h  beam_search_ops_gpu.cu.cc  jvm_callback_op.cc  jvm_callback_op.cc.bak  jvm_callback_op.h  jvm_callback_op.h.bak
tensorflow_jni/src/main/native/: CMakeLists.txt  exception_jni.cc  graph_jni.cc  op_jni.cc  operation_jni.cc  session_jni.cc  tensor_jni.cc  tensorflow_jni.cc
tensorflow_jni/src/main/native/include/: c_api.h  exception_jni.h  graph_jni.h  op_jni.h  operation_jni.h  session_jni.h  tensor_jni.h  tensorflow_jni.h
tpu/src/main/native/: CMakeLists.txt
(+3563 files in other folders)
